# EPainting

./: CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  main.c
main/e_paper/include/e_paper/: e_paper.h  e_paper_interface.h
main/e_paper/src/: e_paper.c  e_paper_interface.c
main/file_io/include/file_io/: file_io.h
main/file_io/src/: file_io.c
